[package]
name = "image_gen"
version = "0.1.0"
authors = ["Stephen Becker IV <github@deathbyescalator.com>"]

[dependencies]
image = "*"
rand = "0.3"
[dependencies.img_hash]
git = "https://github.com/cybergeek94/img_hash"
# For interop with `image`:
features = ["rust-image"]

[profile.release]
debug = true
